# Theonix-OS

./: Dockerfile  debtap-3.6.3-1-any.pkg.tar.zst  quick_repair.sh  quick_repair2.sh  thaid-0.1.0-3-x86_64.pkg.tar.zst  thaid-debug-0.1.0-3-x86_64.pkg.tar.zst  theonix-app-manager-0.1.0-6-any.pkg.tar.zst  theonix-config-0.1.0-9-any.pkg.tar.zst  theonix-store-0.1.0-1-any.pkg.tar.zst  theonix-uacl-0.1.0-6-x86_64.pkg.tar.zst  theonix-uacl-debug-0.1.0-6-x86_64.pkg.tar.zst  theonix.db
.github/workflows/: build-repo.yml  ci.yml
.specstory/: statistics.json
.specstory/history/: 2026-06-20_07-34-19Z-calamares-module-failure-analysis-and-fix-plan.md
calamares/: settings.conf
calamares/modules/: bootloader.conf  initcpio.sh  shellprocess_grubinstall.conf  shellprocess_initcpio.conf  shellprocess_theonix-postinstall.conf  theonix-postinstall.sh
logs_extracted/: 0_Security Audit (thaid).txt  1_Rust (thaid).txt  2_Lint Shell Scripts.txt
logs_extracted/Lint Shell Scripts/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run ShellCheck.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  system.txt
logs_extracted2/: 0_Lint Shell Scripts.txt  1_Rust (thaid).txt  2_Security Audit (thaid).txt
profile/: packages.x86_64  pacman.conf  profiledef.sh
scripts/: build_in_docker.ps1  build_iso.sh  generate_shadow.sh
thaid/: Cargo.toml
thaid-0.1.0-3/: desc
theonix-app-manager/: launcher.py  main.py
theonix-config-0.1.0-2/: desc
theonix-store/: main.py
theonix-uacl/: Cargo.toml
theonix-uacl/src/: converter.rs  database.rs  detector.rs  main.rs  runtime.rs
(+41 files in other folders)
