[package]
name = "theonix-uacl"
version = "0.1.0"
edition = "2021"
description = "Universal Application Compatibility Layer Backend"

[dependencies]
rusqlite = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
nix = "0.28" # For Linux specific process and file operations
dirs = "5.0"
